<resources>
    <string name="app_name">WeAreTheR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">We Are The R</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Поиск города</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorites">Избранные города</string>

    <string name="home_second">Home Second</string>
    <string name="default_search_text">Результат поиска...</string>
    <string name="default_favorites_message">Записей нет...</string>
    <string name="default_weather_place_text">Название места</string>
    <string name="null_search_result">Поиск не дал результата...</string>
    <string name="weather_day_text">День</string>
    <string name="weather_night_text">Ночь</string>
    <string name="weather_temperature_text">Температура</string>
    <string name="weather_temperature_min_text">Мин.</string>
    <string name="weather_temperature_max_text">Макс.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
