<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.wearether.models.pojo.DailyForecast" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/tvDayOfWeek"
        style="@style/Widget.AppCompat.DrawerArrowToggle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="22sp"
        android:text="@{model.weekDay}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDayOfMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/border"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="18sp"
        android:text="@{model.monthDay}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llNight" />

    <LinearLayout
        android:id="@+id/llDay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llNight"
        app:layout_constraintStart_toEndOf="@+id/tvDayOfWeek"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/weather_night_text" />

        <ImageView
            android:id="@+id/ivDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_launcher_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llTemperature"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/weather_day_text" />

        <ImageView
            android:id="@+id/ivNight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_launcher_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/weather_temperature_text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weather_temperature_min_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@{model.temperature.minCelsius}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weather_temperature_max_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@{model.temperature.maxCelsius}"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>